--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 # Project Information
-site_name: baseline
+site_name: cell-seek
 site_author: Skyler Kuhn
 site_description: >-
-  An awesome OpenOmics baseline pipeline
+  An awesome OpenOmics cell-seek pipeline
 
 # Repository
-repo_name: OpenOmics/baseline
-repo_url: https://github.com/OpenOmics/baseline
-edit_uri: https://github.com/OpenOmics/baseline/edit/main/docs/
+repo_name: OpenOmics/cell-seek
+repo_url: https://github.com/OpenOmics/cell-seek
+edit_uri: https://github.com/OpenOmics/cell-seek/edit/main/docs/
 
 # Extra
 extra_css:
@@ -98,9 +98,9 @@ markdown_extensions:
 nav:
   - About: index.md
   - Commands: 
-    - baseline run: usage/run.md
-    - baseline unlock: usage/unlock.md
-    - baseline cache: usage/cache.md
+    - cell-seek run: usage/run.md
+    - cell-seek unlock: usage/unlock.md
+    - cell-seek cache: usage/cache.md
   - FAQ:
     - General Questions: faq/questions.md
   - License: license.md
