Edit to add flags for calling the pipeline and basic pipeline for GEX

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,7 +1,7 @@
 # Python standard library
 from os.path import join
 from os import listdir
-import os, sys
+import os, sys, re
 
 # 3rd party imports from pypi
 from snakemake.workflow import workflow as wf_api
@@ -10,17 +10,32 @@ from snakemake.utils import R
 # Local imports
 from scripts.common import (
     allocated,
-    provided, 
+    provided,
     references,
     str_bool
 )
 
+#Global workflow variables
+configfile: 'config.json'
+pipeline = config['options']['version']
+samples  = list(set([re.sub("_S[0-9]+_L00[0-9]", "", i) for i in config['samples']]))
+workpath = config['project']['workpath']
+genome = config['options']['genome']
+exclude_introns = str_bool(                           # Use introns for pre mRNA,
+    config['options']['exclude_introns']              # default: False
+)
+pipeline_output = []
 
-# Final ouput files of the pipeline
+
+# Import rules
+include: join("rules", "common.smk")
+
+if pipeline == 'cite':
+    include: join("rules", "cite.smk")
+if pipeline == "gex":
+    include: join("rules", "gex.smk")
+
+# Final output files of the pipeline (fully definited within the pipeline smk files)
 rule all:
     input:
-        []
-
-
-# Import rules 
-include: join("rules", "common.smk")
+        pipeline_output
