--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -48,6 +48,8 @@ if pipeline == 'atac':
     include: join("rules", "atac.smk")
 if pipeline == 'vdj':
     include: join("rules", "vdj.smk")
+if pipeline == 'multiome':
+    include: join("rules", "multiome.smk")
 
 # Final output files of the pipeline (fully definited within the pipeline smk files)
 rule all:
