--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -30,6 +30,7 @@ exclude_introns = str_bool(                           # Use introns for pre mRNA
     config['options']['exclude_introns']              # default: False
 )
 input_fastq = config['options']['input']
+filter_file = config['options']['filter']	# Filter threshold file for QC analysis (not used in all pipelines)
 if 'libraries' in config:
     lib_samples = list(config['libraries'].keys()) # Libraries file samples
 pipeline_output = []
