Add aggregate and create-bam flags to pipeline wrapper; add support for aggrgate and create-bam flags to GEX pipeline so that Cell Ranger aggregate only runs when flag is used and no bam file is created by default

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -30,6 +30,10 @@ cmo_sample = config['options']['cmo_sample']     # CMO Sample files for cellrang
 exclude_introns = str_bool(                           # Use introns for pre mRNA,
     config['options']['exclude_introns']              # default: False
 )
+create_bam = str_bool(                           # Create BAM files during Cell Ranger analysis,
+    config['options']['create_bam']              # default: False
+)
+aggr = config['options']['aggregate']
 input_fastq = config['options']['input']
 filter_file = config['options']['filter']	# Filter threshold file for QC analysis (not used in all pipelines)
 if 'libraries' in config:
