Update documentation and bump version Documentation updated to include the new genome command. Bumping the version to 2.0.0 in preparation of release

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,6 +99,7 @@ nav:
   - About: index.md
   - Commands: 
     - cell-seek run: usage/run.md
+    - cell-seek genome: usage/genome.md
     - cell-seek unlock: usage/unlock.md
     - cell-seek cache: usage/cache.md
   - FAQ:
