--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -29,6 +29,7 @@ libraries = config['options']['libraries']     # Libraries files for cellranger 
 cmo_ref = config['options']['cmo_reference']     # CMO Reference files for cellranger (only used in multi pipeline)
 cmo_sample = config['options']['cmo_sample']     # CMO Sample files for cellranger (only used in multi pipelines)
 RENAME = config['options']['rename']            # File containing how to rename samples when running Cell Ranger analysis
+FORCECELLS = config['options']['forcecells']                # File containing the cell counts to use f
 exclude_introns = str_bool(                           # Use introns for pre mRNA,
     config['options']['exclude_introns']              # default: False
 )
@@ -56,6 +57,27 @@ if RENAME != 'None':
     samples = list(set(RENAME_DICT.values()))
 #    samples = list((set(samples) - set(RENAME_DICT.keys())).union(RENAME_DICT.values()))
     samples.sort()
+
+CELLCOUNT_DICT = dict() #Dictionary containing information on renamed samples where the keys are the FASTQ file names and the values are the Cell Ranger sample names
+CELLCOUNT_LIBRARIES = False
+if FORCECELLS != 'None':
+    with open(FORCECELLS) as f:
+        tabs = [i.lower() for i in next(f).strip().split(',')]
+        index_cell = tabs.index('cells')
+        index_sample = tabs.index('sample')
+        if "name" in tabs:
+            index_library = tabs.index('name')
+            CELLCOUNT_LIBRARIES = True
+            for line in f:
+                line = line.strip().split(',')
+                values = CELLCOUNT_DICT.get(line[index_library], list())
+                values.append((line[index_sample], line[index_cell]))
+                CELLCOUNT_DICT[line[index_library]] = values
+        else:
+            for line in f:
+                line = line.strip().split(',')
+                #if line[index_sample] not in CELLCOUNT_DICT:
+                CELLCOUNT_DICT[line[index_sample]] = line[index_cell]
 
 # Import rules
 include: join("rules", "common.smk")
