--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,10 +19,10 @@ jobs:
       run: |
         docker run -v $PWD:/opt2 snakemake/snakemake:v5.24.2 \
         /opt2/cell-seek run --input \
-        /opt2/.tests/WT_S1.R1.fastq.gz /opt2/.tests/WT_S1.R2.fastq.gz \
-        /opt2/.tests/WT_S2_R1.fastq.gz /opt2/.tests/WT_S2_R2.fastq.gz \
-        /opt2/.tests/WT_S3_1.fastq.gz /opt2/.tests/WT_S3_2.fastq.gz \
-        /opt2/.tests/WT_S4_R1.001.fastq.gz /opt2/.tests/WT_S4_R2.001.fastq.gz \
+        /opt2/.tests/WT_S1_L001_R1_001.fastq.gz /opt2/.tests/WT_S1_L001_R2_001.fastq.gz \
+        /opt2/.tests/WT_S2_L001_R1_001.fastq.gz /opt2/.tests/WT_S2_L001_R2_001.fastq.gz \
+        /opt2/.tests/WT_S3_L001_R1_001.fastq.gz /opt2/.tests/WT_S3_L001_R2_001.fastq.gz \
+        /opt2/.tests/WT_S4_L001_R1_001.fastq.gz /opt2/.tests/WT_S4_L001_R2_001.fastq.gz \
         --output /opt2/output --genome hg38 --pipeline gex --cellranger 8.0.0 --mode local --dry-run
     - name: View the pipeline config file
       run: |
