fix: process sample names to cell ranger names on convertsion from input to samples

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,7 +21,7 @@ tmpdir = config['options']['tmp_dir']
 pipeline = config['options']['pipeline']
 CELLRANGER = config['options']['cellranger']
 inputs = config['options']['input']
-samples  = list(set([re.sub("_S[0-9]+_L00[0-9]", "", i) for i in config['samples']]))
+samples  = config['samples']
 workpath = config['project']['workpath']
 genome = config['options']['genome']
 features = config['options']['features']       # Features files for cellranger (not used in all pipelines)
