Initial edits to add support for HTO, OCM, and Flex along with checks to check CellRanger version supports flags used

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -26,8 +26,12 @@ workpath = config['project']['workpath']
 genome = config['options']['genome']
 features = config['options']['features']       # Features files for cellranger (not used in all pipelines)
 libraries = config['options']['libraries']     # Libraries files for cellranger (not used in all pipelines)
-cmo_ref = config['options']['cmo_reference']     # CMO Reference files for cellranger (only used in multi pipeline)
-cmo_sample = config['options']['cmo_sample']     # CMO Sample files for cellranger (only used in multi pipelines)
+CMO_REF = config['options']['cmo_reference']     # CMO Reference files for cellranger (only used in multi pipeline)
+CMO_SAMPLE = config['options']['cmo_sample']     # CMO Sample files for cellranger (only used in multi pipelines)
+HTO_SAMPLE = config['options']['hto_sample']     # HTO Sample files for cellranger (only used in multi pipelines)
+OCM_SAMPLE = config['options']['ocm_sample']     # OCM Sample files for cellranger (only used in multi pipelines)
+PROBE_SAMPLE = config['options']['probe_sample']     # Probe Sample files for cellranger (only used in multi pipelines)
+PROBE_SET = config['options']['probe_set']     # Probe Set file for cellranger (only used in multi pipelines)
 RENAME = config['options']['rename']            # File containing how to rename samples when running Cell Ranger analysis
 FORCECELLS = config['options']['forcecells']                # File containing the cell counts to use f
 exclude_introns = str_bool(                           # Use introns for pre mRNA,
