--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,7 @@ nav:
     - cell-seek run: usage/run.md
     - cell-seek genome: usage/genome.md
     - cell-seek unlock: usage/unlock.md
+    - cell-seek shinycell: usage/shinycell.md
     - cell-seek cache: usage/cache.md
   - FAQ:
     - General Questions: faq/questions.md
