--- a/docker/scATAC_signac/Dockerfile
+++ b/docker/scATAC_signac/Dockerfile
@@ -1,4 +1,4 @@
-FROM rocker/r-ver:4.3.2
+FROM rocker/r-ver:4.5.0
 
 LABEL maintainer="OpenOmics"
 LABEL description="Docker image for Signac scATAC-seq QC analysis"
@@ -26,43 +26,43 @@ RUN apt-get update && apt-get install -y \
 RUN R -e "install.packages('BiocManager', repos='https://cloud.r-project.org')"
 
 # Install Bioconductor packages
-RUN R -e "BiocManager::install(c( \
-    'Signac', \
-    'Seurat', \
-    'GenomicRanges', \
-    'rtracklayer', \
-    'SeuratObject', \
-    'BSgenome', \
-    'GenomeInfoDb', \
-    'IRanges', \
-    'S4Vectors', \
-    'BiocGenerics' \
-    ), ask=FALSE, update=TRUE)"
+# RUN R -e "BiocManager::install(c( \
+#     'Signac', \
+#     'Seurat', \
+#     'GenomicRanges', \
+#     'rtracklayer', \
+#     'SeuratObject', \
+#     'BSgenome', \
+#     'GenomeInfoDb', \
+#     'IRanges', \
+#     'S4Vectors', \
+#     'BiocGenerics' \
+#     ), ask=FALSE, update=TRUE)"
 
-# Install additional CRAN packages
-RUN R -e "install.packages(c( \
-    'ggplot2', \
-    'gridExtra', \
-    'dplyr', \
-    'stringr', \
-    'optparse', \
-    'cluster', \
-    'devtools', \
-    'hdf5r', \
-    'knitr', \
-    'rmarkdown', \
-    'flextable', \
-    'base64enc', \
-    'xfun', \
-    'tools' \
-    ), repos='https://cloud.r-project.org')"
+# # Install additional CRAN packages
+# RUN R -e "install.packages(c( \
+#     'ggplot2', \
+#     'gridExtra', \
+#     'dplyr', \
+#     'stringr', \
+#     'optparse', \
+#     'cluster', \
+#     'devtools', \
+#     'hdf5r', \
+#     'knitr', \
+#     'rmarkdown', \
+#     'flextable', \
+#     'base64enc', \
+#     'xfun', \
+#     'tools' \
+#     ), repos='https://cloud.r-project.org')"
 
-# Create scripts directory
-RUN mkdir -p /opt/scripts
-RUN export PATH="/opt/scripts:${PATH}"
+# # Create scripts directory
+# RUN mkdir -p /opt/scripts
+# RUN export PATH="/opt/scripts:${PATH}"
 
-# Set working directory
-WORKDIR /data
+# # Set working directory
+# WORKDIR /data
 
-# Default command
-CMD ["/bin/bash"]
+# # Default command
+# CMD ["/bin/bash"]
