--- a/docker/scATAC_signac/Dockerfile
+++ b/docker/scATAC_signac/Dockerfile
@@ -20,49 +20,57 @@ RUN apt-get update && apt-get install -y \
     libjpeg-dev \
     pandoc \
     zlib1g-dev \
+    ca-certificates \
+    curl \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Install R packages from CRAN
-RUN R -e "install.packages('BiocManager', repos='https://cloud.r-project.org')"
+# Test internet connectivity before installing R packages
+RUN curl -s https://cloud.r-project.org/src/contrib/PACKAGES | head -5 || \
+    (echo "ERROR: Cannot access CRAN repository" && exit 1)
+
+# Configure R to use CRAN mirror and install BiocManager
+RUN R -e "options(repos = c(CRAN = 'https://cloud.r-project.org')); \
+    install.packages('BiocManager', dependencies=TRUE)"
 
 # Install Bioconductor packages
-RUN R -e "BiocManager::install(c( \
-    'Signac', \
-    'Seurat', \
-    'GenomicRanges', \
-    'rtracklayer', \
-    'SeuratObject', \
-    'BSgenome', \
-    'GenomeInfoDb', \
-    'IRanges', \
-    'S4Vectors', \
-    'BiocGenerics' \
-    ), ask=FALSE, update=TRUE)"
+# RUN R -e "BiocManager::install(c( \
+#     'Signac', \
+#     'Seurat', \
+#     'GenomicRanges', \
+#     'rtracklayer', \
+#     'SeuratObject', \
+#     'BSgenome', \
+#     'GenomeInfoDb', \
+#     'IRanges', \
+#     'S4Vectors', \
+#     'BiocGenerics' \
+#     ), ask=FALSE, update=TRUE)"
 
-# Install additional CRAN packages
-RUN R -e "install.packages(c( \
-    'ggplot2', \
-    'gridExtra', \
-    'dplyr', \
-    'stringr', \
-    'optparse', \
-    'cluster', \
-    'devtools', \
-    'hdf5r', \
-    'knitr', \
-    'rmarkdown', \
-    'flextable', \
-    'base64enc', \
-    'xfun', \
-    'tools' \
-    ), repos='https://cloud.r-project.org')"
+# # Install additional CRAN packages
+# RUN R -e "install.packages(c( \
+#     'ggplot2', \
+#     'gridExtra', \
+#     'dplyr', \
+#     'stringr', \
+#     'optparse', \
+#     'cluster', \
+#     'devtools', \
+#     'hdf5r', \
+#     'knitr', \
+#     'rmarkdown', \
+#     'flextable', \
+#     'base64enc', \
+#     'xfun', \
+#     'tools' \
+#     ), repos='https://cloud.r-project.org')"
 
-# Create scripts directory
-RUN mkdir -p /opt/scripts
-RUN export PATH="/opt/scripts:${PATH}"
+# # Create scripts directory
+# RUN mkdir -p /opt/scripts
+# RUN export PATH="/opt/scripts:${PATH}"
 
-# Set working directory
-WORKDIR /data
+# # Set working directory
+# WORKDIR /data
 
-# Default command
-CMD ["/bin/bash"]
+# # Default command
+# CMD ["/bin/bash"]
