feat: containerize signac workflow

--- a/docker/scATAC_signac/Dockerfile
+++ b/docker/scATAC_signac/Dockerfile
@@ -25,52 +25,47 @@ RUN apt-get update && apt-get install -y \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Test internet connectivity before installing R packages
-RUN curl -s https://cloud.r-project.org/src/contrib/PACKAGES | head -5 || \
-    (echo "ERROR: Cannot access CRAN repository" && exit 1)
-
 # Configure R to use CRAN mirror and install BiocManager
-RUN R -e "options(repos = c(CRAN = 'https://cloud.r-project.org')); \
-    install.packages('BiocManager', dependencies=TRUE)"
+RUN R -e "install.packages('BiocManager', dependencies=TRUE)"
 
 # Install Bioconductor packages
-# RUN R -e "BiocManager::install(c( \
-#     'Signac', \
-#     'Seurat', \
-#     'GenomicRanges', \
-#     'rtracklayer', \
-#     'SeuratObject', \
-#     'BSgenome', \
-#     'GenomeInfoDb', \
-#     'IRanges', \
-#     'S4Vectors', \
-#     'BiocGenerics' \
-#     ), ask=FALSE, update=TRUE)"
+RUN R -e "BiocManager::install(c( \
+    'Signac', \
+    'Seurat', \
+    'GenomicRanges', \
+    'rtracklayer', \
+    'SeuratObject', \
+    'BSgenome', \
+    'GenomeInfoDb', \
+    'IRanges', \
+    'S4Vectors', \
+    'BiocGenerics' \
+    ), ask=FALSE, update=TRUE)"
 
 # # Install additional CRAN packages
-# RUN R -e "install.packages(c( \
-#     'ggplot2', \
-#     'gridExtra', \
-#     'dplyr', \
-#     'stringr', \
-#     'optparse', \
-#     'cluster', \
-#     'devtools', \
-#     'hdf5r', \
-#     'knitr', \
-#     'rmarkdown', \
-#     'flextable', \
-#     'base64enc', \
-#     'xfun', \
-#     'tools' \
-#     ), repos='https://cloud.r-project.org')"
+RUN R -e "install.packages(c( \
+    'ggplot2', \
+    'gridExtra', \
+    'dplyr', \
+    'stringr', \
+    'optparse', \
+    'cluster', \
+    'devtools', \
+    'hdf5r', \
+    'knitr', \
+    'rmarkdown', \
+    'flextable', \
+    'base64enc', \
+    'xfun', \
+    'tools' \
+    ), dependencies=TRUE)"
 
 # # Create scripts directory
-# RUN mkdir -p /opt/scripts
-# RUN export PATH="/opt/scripts:${PATH}"
+RUN mkdir -p /opt/scripts
+RUN export PATH="/opt/scripts:${PATH}"
 
 # # Set working directory
-# WORKDIR /data
+WORKDIR /data
 
 # # Default command
-# CMD ["/bin/bash"]
+CMD ["/bin/bash"]
