--- a/docker/sc_atac_analysis/Dockerfile
+++ b/docker/sc_atac_analysis/Dockerfile
@@ -60,10 +60,7 @@ RUN R -e "install.packages(c( \
 RUN mkdir -p /opt/scripts
 RUN export PATH="/opt/scripts:${PATH}"
 
-ADD ./signacSampleQC.R /opt/scripts/signacSampleQC.R
-ADD ./signacMultiSampleQC.R /opt/scripts/signacMultiSampleQC.R
-ADD ./signacSampleQC.Rmd /opt/scripts/signacSampleQC.Rmd
-ADD ./signacMultiSampleQC.Rmd /opt/scripts/signacMultiSampleQC.Rmd
+ADD signacSampleQC.R signacSampleQC.Rmd signacMultiSampleQC.R signacMultiSampleQC.Rmd /opt/scripts/
 
 # Set working directory
 WORKDIR /data
