fix: add hdf5 to docker

--- a/docker/sc_atac_analysis/Dockerfile
+++ b/docker/sc_atac_analysis/Dockerfile
@@ -28,7 +28,7 @@ RUN R -e "install.packages('pak', repos='https://cloud.r-project.org')"
 RUN R -e "pak::pkg_install(c('Signac', 'Seurat', 'GenomicRanges', \
                              'rtracklayer', 'SeuratObject', 'BSgenome', \
                              'GenomeInfoDb', 'IRanges', 'S4Vectors', \
-                             'BiocGenerics'))"
+                             'BiocGenerics', 'hdf5r'))"
 
 # Install additional CRAN packages
 RUN R -e "install.packages(c( \
