fix: restructure installs again

--- a/docker/sc_atac_analysis/Dockerfile
+++ b/docker/sc_atac_analysis/Dockerfile
@@ -25,8 +25,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install R packages from CRAN
-RUN R -e "install.packages(c('hdf5r', 'rtracklayer', 'GenomicRanges', 'stringr', 'dplyr', \
-                             'ggplot2', 'cluster', 'stringr', 'Seurat', 'Signac'), repos='https://cloud.r-project.org')"
+RUN R -e "install.packages(c('hdf5r', 'rtracklayer', 'stringr', 'dplyr', 'ggplot2', 'cluster', 'stringr', 'Seurat', 'BiocManager'), repos='https://cloud.r-project.org')"
+RUN R -e "BiocManager::install(c('GenomeInfoDb', 'GenomicRanges', 'IRanges', 'Rsamtools', 'S4Vectors', 'BiocGenerics'))"
+RUN R -e "install.packages('Signac')"
 
 # Create scripts directory
 RUN mkdir -p /opt/scripts
